Add transfers base methods and workers to update status
